--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     stages {
         stage('git checkout') {
             steps {
-             git 'https://github.com/Dimple-sasi-12/basic-javaapplication.git'
+             git branch:'main' , url: 'https://github.com/Dimple-sasi-12/basic-javaapplication.git'
             }
         }
          stage('compile') {
