--- a/jenkinsfile
+++ b/jenkinsfile
@@ -38,10 +38,11 @@ pipeline {
          stage('docker build') {
             steps {
              script {
+                withDockerRegistry(credentialsId: 'docker-cred', toolName: 'docker') {
                     sh 'docker build -t java-img .'
-                  }
               }
             }
+           }
          stage('docker container') {
             steps {
              script {
