--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,65 +1,64 @@
 def COLOR_MAP = [
     'SUCCESS': 'good',
     'FAILURE': 'danger'
-    ]
+]
+
 pipeline {
     agent any
     tools {
         maven 'maven'
     }
-     environment {
+    environment {
         SCANNER_HOME = tool 'sonarqube'
     }
     stages {
         stage('git checkout') {
             steps {
-             git branch:'main' , url: 'https://github.com/Dimple-sasi-12/basic-javaapplication.git'
+                git branch: 'main', url: 'https://github.com/Dimple-sasi-12/basic-javaapplication.git'
             }
         }
-         stage('compile') {
+        stage('compile') {
             steps {
-              sh 'mvn compile'
+                sh 'mvn compile'
             }
         }
-         stage('code analysis') {
+        stage('code analysis') {
             steps {
-              withSonarQubeEnv('sonarqube') {
-               sh ''' $SCANNER_HOME/bin/sonar-scanner -Dsonar.projectName=CI-CD-Project \
-               -Dsonar.java.binaries=. \
-               -Dsonar.projectKey=CI-CD-Project'''
-              }
+                withSonarQubeEnv('sonarqube') {
+                    sh '''$SCANNER_HOME/bin/sonar-scanner -Dsonar.projectName=CI-CD-Project \
+                          -Dsonar.java.binaries=. \
+                          -Dsonar.projectKey=CI-CD-Project'''
+                }
             }
         }
         stage('package') {
             steps {
-              sh 'mvn install'
+                sh 'mvn install'
             }
         }
-         stage('docker build') {
+        stage('docker build') {
             steps {
-             script {
-                withDockerRegistry(credentialsId: 'docker-cred', toolName: 'docker') {
-                    sh 'docker build -t java-img .'
-              }
+                script {
+                    withDockerRegistry(credentialsId: 'docker-cred', toolName: 'docker') {
+                        sh 'docker build -t java-img .'
+                    }
+                }
             }
-           }
-         stage('docker container') {
+        }
+        stage('docker container') {
             steps {
-             script {
-                sh 'docker run -itd -p 8082:8081 java-img'
-                  }
-              }
-            }  
-        }	
- 
+                script {
+                    sh 'docker run -itd -p 8082:8081 java-img'
+                }
+            }
+        }
+    }
     post {
         always {
             echo 'slack Notification.'
             slackSend channel: '#dev',
-            color: COLOR_MAP [currentBuild.currentResult],
-            message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URl}"
-            
+            color: COLOR_MAP[currentBuild.currentResult],
+            message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URL}"
         }
     }
-}
 }
