--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,16 +5,13 @@ def COLOR_MAP = [
 
 pipeline {
     agent any
-    tools {
-        maven 'maven'
-    }
     environment {
         SCANNER_HOME = tool 'sonarqube'
     }
     stages {
         stage('git checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/Dimple-sasi-12/basic-javaapplication.git'
+                git'https://github.com/Dimple-sasi-12/basic-javaapplication.git'
             }
         }
         stage('compile') {
@@ -33,18 +30,12 @@ pipeline {
         }
         stage('docker build') {
             steps {
-                script {
-                    withDockerRegistry(credentialsId: 'docker-cred', toolName: 'docker') {
-                        sh 'docker build -t java-img .'
-                    }
+               sh 'docker build -t java-img .
                 }
             }
-        }
         stage('docker container') {
             steps {
-                script {
-                    sh 'docker run -itd -p 8082:8081 java-img'
-                }
+               sh 'docker run -itd -p 8082:8081 java-img'
             }
         }
     }
